# TextureGen

./: .gitmodules  CMakeLists.txt  README.md  api.cpp  api.h  context.cpp  context.h  pack_shaders.cpp  renderer.cpp  renderer.h
python/: TextureGen.py  test.py
shaders/: build.sh  compile.bat  frag_simple.frag  vert_simple.spv  vert_simple.vert
